Cabal-tests/tests/ParserTests/errors/noVersion2.cabal
name:                noVersion
version:             0
synopsis:            ^>= in build-depends
build-type:          Simple
cabal-version:       1.20

library
  default-language: Haskell2010
  exposed-modules:  ElseIf
  build-depends:    bad-package ^>= 2.0
